Fix cart button visibility

--- a/output.css
+++ b/output.css
@@ -1541,6 +1541,9 @@ video {
 .pb-4 {
   margin-bottom: 1rem;
 }
+.pt-4 {
+  margin-top: 4rem;
+}
 
 .self-end {
   align-self: flex-end;
